# machine_learning

./: README.md  data_sources.txt  pyproject.toml
src/: adaline.py  cancer_risk.py  comparisions.py  diabetes.py  diabets.py  perceptron.py  sun_spots.py  sun_spots_pandas.py  urea_stone.py
src/data/: cancer.csv  sunspot.txt
src/from_books/: adaline.py  perceptron.py
